# CZ4031-Project-1

./: .gitignore  CMakeLists.txt  README.md
include/: bpt.h  deleteBpt.h  group.h  main.h  memBlock.h  misc.h  queue.h  readFile.h  sorting.h
src/: bpt.c  deleteBpt.c  forref.c  group.c  main.c  memBlock.c  misc.c  queue.c  readFile.c  sorting.c
